results/SVCOMP/specgen/log-uninitialised1-2024_03_03_22_13_29.txt
class Main {
    //@ ensures \result <==> i[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
    //@ ensures \result <==> i[3] == 0;
                             ^
  symbol:   variable i
  location: class Main
1 error

class Main {
    //@ ensures \result <==> i[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
    //@ ensures \result <==> i[3] == 0;
                             ^
  symbol:   variable i
  location: class Main
1 error

class Main {
    //@ ensures \result <==> \fresh(i) && i.length == 10 && i[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
    //@ ensures \result <==> \fresh(i) && i.length == 10 && i[3] == 0;
                                    ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
    //@ ensures \result <==> \fresh(i) && i.length == 10 && i[3] == 0;
                                          ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
    //@ ensures \result <==> \fresh(i) && i.length == 10 && i[3] == 0;
                                                            ^
  symbol:   variable i
  location: class Main
3 errors

class Main {
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 && i[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 && i[3] == 0);
        ^
2 verification failures

class Main {
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 && i[3] == 0);  
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 && i[3] == 0);  
        ^
2 verification failures

class Main {
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 || i[3] == 0);  
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result <==> (\exists int[] i; i != null && i.length == 10 || i[3] == 0);  
        ^
2 verification failures

class Main {
    //@ ensures \result <==> (\forall int[] i; i != null && i.length == 10 && i[3] == 0);  
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result <==> (\forall int[] i; i != null && i.length == 10 && i[3] == 0);  
        ^
2 verification failures

class Main {
    //@ ensures \result <==> (\forall int[] i; i != null && i.length == 10 || i[3] == 0);  
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result <==> (\forall int[] i; i != null && i.length == 10 || i[3] == 0);  
        ^
2 verification failures

class Main {
 
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}


